fix: Use StandardCharsets class even more